验证 iconPosition 为 left 或 right 中的一个

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 		<g-button icon="settings">我爱css</g-button>
 		<g-button icon="settings" icon-position="left">我爱js</g-button>
 		<g-button icon="settings" icon-position="right">提交</g-button>
+		<g-button icon="settings" icon-position="right">确定</g-button>
 	</div>
 
 	<script src="./src/app.js"></script>
