--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
 
 <body>
 	<div id="app">
-		<g-button>我爱js</g-button>
-		<g-button icon="settings">我爱css</g-button>
-		<g-button icon="settings" icon-position="left">我爱js</g-button>
-		<g-button icon="settings" icon-position="right">提交</g-button>
+		<g-button :loading="loading1" @click="loading1 = !loading1">我爱html</g-button>
+		<g-button :loading="loading2" icon="settings" @click="loading2 = !loading2">我爱css</g-button>
+		<g-button :loading="loading3" icon="settings" icon-position="right" @click="loading3 = !loading3">我爱js</g-button>
 	</div>
 
 	<script src="./src/app.js"></script>
