--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 		<g-button :loading="loading1" @click="loading1 = !loading1">我爱html</g-button>
 		<g-button :loading="loading2" icon="settings" @click="loading2 = !loading2">我爱css</g-button>
 		<g-button :loading="loading3" icon="settings" icon-position="right" @click="loading3 = !loading3">我爱js</g-button>
+		<g-button-group>
+			<g-button icon="left">上一页</g-button>
+			<g-button>更多</g-button>
+			<g-button icon="right" icon-position="right">下一页</g-button>
+		</g-button-group>
 	</div>
 
 	<script src="./src/app.js"></script>
