--- a/index.html
+++ b/index.html
@@ -32,22 +32,33 @@
 			font-size: var(--font-size);
 		}
 	</style>
+	<style>
+		.box {
+			margin: 20px;
+		}
+	</style>
 </head>
 
 <body>
 	<div id="app">
-		<g-input value="哈哈"></g-input>
-		<g-input value="呵呵" disabled></g-input>
-		<g-input value="嘿嘿" readonly></g-input>
-		<br>
-		<g-button :loading="loading1" @click="loading1 = !loading1">我爱html</g-button>
-		<g-button :loading="loading2" icon="settings" @click="loading2 = !loading2">我爱css</g-button>
-		<g-button :loading="loading3" icon="settings" icon-position="right" @click="loading3 = !loading3">我爱js</g-button>
-		<g-button-group>
-			<g-button icon="left">上一页</g-button>
-			<g-button>更多</g-button>
-			<g-button icon="right" icon-position="right">下一页</g-button>
-		</g-button-group>
+		<div class="box">
+			<g-input value="哈哈"></g-input>
+			<g-input value="呵呵" disabled></g-input>
+			<g-input value="嘿嘿" readonly></g-input>
+		</div>
+		<div class="box">
+			<g-input value="嘻嘻" error="姓名不能少于两个字"></g-input>
+		</div>
+		<div class="box">
+			<g-button :loading="loading1" @click="loading1 = !loading1">我爱html</g-button>
+			<g-button :loading="loading2" icon="settings" @click="loading2 = !loading2">我爱css</g-button>
+			<g-button :loading="loading3" icon="settings" icon-position="right" @click="loading3 = !loading3">我爱js</g-button>
+			<g-button-group>
+				<g-button icon="left">上一页</g-button>
+				<g-button>更多</g-button>
+				<g-button icon="right" icon-position="right">下一页</g-button>
+			</g-button-group>
+		</div>
 		<div id="test"></div>
 	</div>
 
