--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
 
 <body>
 	<div id="app">
-			<div class="box">
-			<g-input value="嘻嘻" @change="inputChange"></g-input>
+		<div class="box">
+			<g-input v-model="message"></g-input>
+			<p>{{message}}</p>
+			<button @click="message+=1">+1</button>
 		</div>
 		<div class="box">
 			<g-button :loading="loading1" @click="loading1 = !loading1">我爱html</g-button>
